force-app/main/default/objects/IndividualApplication/IndividualApplication.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>