force-app/main/default/objects/IndividualApplication/fields/Additional_Form__c.field-meta.xml
<CustomField>
    <fullName>Additional_Form__c</fullName>
    <label>Additional Form</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>