force-app/main/default/objects/IndividualApplication/fields/Additional_Form_Id__c.field-meta.xml
<CustomField>
    <fullName>Additional_Form_Id__c</fullName>
    <label>Additional Form Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>