force-app/main/default/objects/IndividualApplication/fields/Eligibility_Form__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Form__c</fullName>
    <label>Eligibility Form</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>