force-app/main/default/objects/IndividualApplication/fields/Eligibility_Form_Id__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Form_Id__c</fullName>
    <label>Eligibility Form Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>