force-app/main/default/objects/IndividualApplication/fields/Feasibility__c.field-meta.xml
<CustomField>
    <fullName>Feasibility__c</fullName>
    <inlineHelpText>Can the grant be completed in time?</inlineHelpText>
    <label>Feasibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Determination_Criteria</valueSetName>
    </valueSet>
</CustomField>