force-app/main/default/objects/IndividualApplication/fields/Fund_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Fund_Opportunity_Name__c</fullName>
    <formula>FundingOpportunity.Name</formula>
    <label>Fund Opportunity Name</label>
    <type>Text</type>
</CustomField>