force-app/main/default/objects/IndividualApplication/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <inlineHelpText>What expected results of the grant project would be</inlineHelpText>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Determination_Criteria</valueSetName>
    </valueSet>
</CustomField>