force-app/main/default/objects/IndividualApplication/fields/Internal_Form__c.field-meta.xml
<CustomField>
    <fullName>Internal_Form__c</fullName>
    <label>Internal Form</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>