force-app/main/default/objects/IndividualApplication/fields/Internal_Form_Id__c.field-meta.xml
<CustomField>
    <fullName>Internal_Form_Id__c</fullName>
    <label>Internal Form Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>