force-app/main/default/objects/IndividualApplication/fields/Involvement__c.field-meta.xml
<CustomField>
    <fullName>Involvement__c</fullName>
    <inlineHelpText>Is the recipient a strong representative of and involved in their community?</inlineHelpText>
    <label>Involvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Determination_Criteria</valueSetName>
    </valueSet>
</CustomField>