force-app/main/default/objects/IndividualApplication/fields/Need__c.field-meta.xml
<CustomField>
    <fullName>Need__c</fullName>
    <inlineHelpText>How much need is the applicant in?</inlineHelpText>
    <label>Need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Determination_Criteria</valueSetName>
    </valueSet>
</CustomField>