force-app/main/default/objects/IndividualApplication/fields/Person_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Name__c</fullName>
    <formula>IF(
       Account.IsPersonAccount, 
       Account.FirstName &amp; &quot; &quot; &amp; Account.LastName, 
       Account.Name
   )</formula>
    <label>Person Account Name</label>
    <type>Text</type>
</CustomField>