force-app/main/default/objects/IndividualApplication/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <label>Project Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>