force-app/main/default/objects/IndividualApplication/fields/Submittable_Public_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Submittable_Public_Org_Id__c</fullName>
    <label>Submittable Public Org Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>