force-app/main/default/objects/IndividualApplication/fields/Submittable_Submission_Id__c.field-meta.xml
<CustomField>
    <fullName>Submittable_Submission_Id__c</fullName>
    <label>Submittable Submission Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>