force-app/main/default/objects/IndividualApplication/fields/Webinar_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Date_and_Time__c</fullName>
    <description>Stores the date and time of the webinar</description>
    <label>Webinar Date and Time</label>
    <type>DateTime</type>
</CustomField>