force-app/main/default/objects/IndividualApplication/listViews/All_IndividualApplication.listView-meta.xml
<ListView>
    <fullName>All_IndividualApplication</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>AppliedDate</columns>
    <columns>Status</columns>
    <columns>ApplicationName</columns>
    <columns>ApplicationType</columns>
    <columns>Budget</columns>
    <filterScope>Everything</filterScope>
    <label>All Individual Applications</label>
</ListView>