force-app/main/default/objects/IndividualApplication/listViews/Submittable_Applications.listView-meta.xml
<ListView>
    <fullName>Submittable_Applications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>AppliedDate</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Submittable_Submission_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Submittable Applications</label>
</ListView>